--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
     "format": "yarn lint --fix"
   },
   "devDependencies": {
-    "@open-wc/testing": "^3.1.7",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@web/test-runner": "^0.15.0",
-    "concurrently": "^7.3.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@open-wc/testing": "^3.2.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@web/test-runner": "^0.16.1",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.3",
-    "rimraf": "^3.0.2",
-    "rollup": "^3.10.1",
-    "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-terser": "^7.0.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.26.0",
+    "rollup-plugin-filesize": "^10.0.0",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6"
   }
